# magni_robot

./: ros_dependencies.repos
magni_bringup/: CMakeLists.txt  package.xml
magni_bringup/launch/: core.launch.py
magni_bringup/param/: base.yaml
magni_description/: CMakeLists.txt  package.xml
magni_description/ros2_control/: magni_system.ros2_control.xacro
magni_description/urdf/: magni.urdf.xacro  magni_system.urdf.xacro
