<?xml version="1.0"?>
<package format="3">
  <name>magni_bringup</name>
  <version>0.4.3</version>
  <description>The magni_bringup package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <exec_depend>magni_description</exec_depend> -->
  <exec_depend>ubiquity_motor</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!-- <exec_depend>controller_manager</exec_depend> -->
  <!-- <exec_depend>joint_state_controller</exec_depend> -->
  <!-- <exec_depend>diff_drive_controller</exec_depend> -->
  <!-- <exec_depend>oled_display_node</exec_depend> -->

  <depend>xacro</depend>

  <!-- Force chrony to be installed -->
  <exec_depend>chrony</exec_depend>

  <export>
    <buildtool_depend>ament_cmake</buildtool_depend>
  </export>
</package>
